--- a/client/index.css
+++ b/client/index.css
@@ -12,4 +12,32 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: left;
+}
+
+.buttom-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-your-info {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.your-info-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.input {
+    height: 50px;
+    font-size: 24px;
+}
+
+.textarea {
+    font-size: 24px;
 }
