--- a/client/index.css
+++ b/client/index.css
@@ -43,6 +43,20 @@ body {
     font-size: 24px;
 }
 
+.input-name {
+    margin-bottom: 70px;
+    height: 50px;
+    font-size: 24px;
+}
+
 .textarea {
     font-size: 24px;
 }
+
+
+
+
+
+
+
+
